--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,13 @@ input{
   border-bottom: 5px solid black;
 }
 button{
+  padding: 0;
   cursor: pointer;
   display: inline-block;
   box-sizing: border-box;
   width: 70px;
   height: 50px;
-  font-size: 20px;
+  font-size: 15px;
   border: none;
   border-radius: 5px;
   color: white;
